Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-744b9091e5f6>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-744b9091e5f6>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    4x + 4y = 12\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Your solution here \n",
     "x = coffee\n",
@@ -45,7 +54,7 @@
     "4x + 4y = 12\n",
     "3x = 2y\n",
     "x = 1.5\n",
-    "x\n",
+    "\n",
     "\n"
    ]
   },
