--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "xx = Jim\n",
+    "\n",
+    "yy = Bob \n",
+    "\n",
+    "\n"
    ]
   },
   {
