--- a/index.ipynb
+++ b/index.ipynb
@@ -34,38 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-f2e4c45377e1>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-f2e4c45377e1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    4x + 4y = 12\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.2\n"
      ]
     }
    ],
    "source": [
     "# Your solution here \n",
-    "4x + 4y = 12\n",
-    "3x = 2y\n",
     "\n",
-    "3x - 2y = 0 \n",
+    "print( 4 * 1.8)\n",
+    "# 4x + 4y = 12\n",
+    "# 3x = 2y\n",
     "\n",
-    "x = 3-y\n",
+    "# 3x - 2y = 0 \n",
     "\n",
-    "3(3-y) - 2y = 0\n",
+    "# x = 3-y\n",
     "\n",
-    "9-3y -2y = 0\n",
+    "# 3(3-y) - 2y = 0\n",
     "\n",
-    "-3y - 2y = -9\n",
+    "# 9-3y -2y = 0\n",
     "\n",
-    "y = 9/5 = 1.8\n",
+    "# -3y - 2y = -9\n",
     "\n",
-    "4x + 4(1.8) = 12\n",
+    "# y = 9/5 = 1.8\n",
     "\n",
+    "# 4x + 4(1.8) = 12\n",
     "\n",
+    "# 4x = 12-\n",
+    " 12 - \n",
     "\n",
     "\n",
     "\n",
