Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,14 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.2\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-06c5c6d88ad2>, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-06c5c6d88ad2>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    4x = (12 - 7.2)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -67,7 +68,8 @@
     "# 4x + 4(1.8) = 12\n",
     "\n",
     "# 4x = 12-\n",
-    " 12 - \n",
+    "4x = (12 - 7.2)\n",
+    "print (4x\n",
     "\n",
     "\n",
     "\n",
