Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,25 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.2\n"
+      "7.2\n",
+      "1.2\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "50.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,7 +71,9 @@
     "\n",
     "#4x = 4.8\n",
     "\n",
-    "200 * .25\n",
+    "x = (4.8/4)\n",
+    "print (x)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
